Correct image aligned breakpoint

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -893,7 +893,7 @@ object {
   max-width: 80em;
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 965px) {
   .home #page {
     flex-flow: row wrap;
   }
